--- a/app/views/rooms/index.html.erb
+++ b/app/views/rooms/index.html.erb
@@ -4,12 +4,15 @@
 <div class="container">
   <div class="form-wrapper" style="width: 500px; margin: 0 auto;">
     <h1>Flatoickr Demo</h1>
-<%= simple_form_for :search, url: search_room_path, method: :get do |t| %>
+<!-- changing url -original- url: , search_room_path -->
+
+<%= simple_form_for :search, url: rooms_path, method: :get do |t| %>
 <%= t.input :start_date, as: :string, input_html: { class: "datepicker"} %>
 <%= t.input :end_date, as: :string, input_html: { class: "datepicker"} %>
  <%= t.input :district, collection: ["Mitte", "Prenzlauer Berg", "Wedding"] %>
   <%= t.submit "search", class: "btn btn-primary" %>
 <% end %>
+
   </div>
 </div>
 
