--- a/app/views/bookings/new.html.erb
+++ b/app/views/bookings/new.html.erb
@@ -1,2 +1,17 @@
 <h1>Bookings#new</h1>
 <p>Find me in app/views/bookings/new.html.erb</p>
+
+<div class="container">
+      <div class="card-product">
+      <img src= <%= @room.image_url %> />
+        <div class="card-product-infos">
+          <h2><%= @room.name %></h2>
+          <p><strong>District:</strong> <%= @room.district %></p>
+          <p><strong>Address:</strong> <%= @room.address %></p>
+          <h2 class="price"><strong><%= @room.price %></strong> Złoty / hour</h2>
+          <p><strong>Equipment:</strong> <%= @room.equipment %></p>
+          <p><strong>Description:</strong> <%= @room.description %></p>
+          <%= link_to "Book now", new_room_booking_path(room_id:@room), class: "btn btn-flat card-product-btn" %>
+        </div>
+      </div>
+  </div>
