--- a/app/views/rooms/index.html.erb
+++ b/app/views/rooms/index.html.erb
@@ -1,10 +1,6 @@
-
-<h1>Rooms#index</h1>
-<p>Find me HELLO HELLO in app/views/rooms/index.html.erb</p>
-
 <div class="container">
   <div class="form-wrapper" style="width: 500px; margin: 0 auto;">
-    <h1>Flatoickr Demo</h1>
+    <h1>Flatpickr Demo</h1>
 <!-- changing url -original- url: , search_room_path -->
 
 <%= simple_form_for :search, url: rooms_path, method: :get do |t| %>
@@ -16,10 +12,6 @@
 
   </div>
 </div>
-
-
-
-
 
 
 <div class="background_image">
@@ -54,18 +46,6 @@
   </div>
 
   <div class="container">
-    <div class="form-wrapper" style="width: 500px; margin: 0 auto;">
-      <h1>Flatoickr Demo</h1>
-  <%= simple_form_for :search, url: search_room_path, method: :get do |t| %>
-  <%= t.input :start_date, as: :string, input_html: { class: "datepicker"} %>
-  <%= t.input :end_date, as: :string, input_html: { class: "datepicker"} %>
-   <%= t.input :district, collection: ["Mitte", "Prenzlauer Berg", "Wedding"] %>
-    <%= t.submit "search", class: "btn btn-primary" %>
-  <% end %>
-    </div>
-  </div>
-
-  <div class="container">
     <% @rooms.each do |room| %>
       <div class="card-product">
       <img src= <%= room.image_url %> />
@@ -76,16 +56,9 @@
           <h2 class="price"><strong><%= room.price %></strong> Złoty / hour</h2>
           <p><strong>Equipment:</strong> <%= room.equipment %></p>
           <p><strong>Description:</strong> <%= room.description %></p>
-          <%= link_to "Book now", "#", class: "btn btn-flat card-product-btn" %>
+          <%= link_to "Book now", new_room_booking_path(room), class: "btn btn-flat card-product-btn" %>
         </div>
       </div>
     <% end %>
   </div>
-
 </div>
-
-
-
-
-<!-- # Check out the UI kit of LeWagon -->
-
