--- a/app/views/rooms/index.html.erb
+++ b/app/views/rooms/index.html.erb
@@ -1,27 +1,3 @@
-
-<h1>Rooms#index</h1>
-<p>Find me HELLO HELLO in app/views/rooms/index.html.erb</p>
-
-<div class="container">
-  <div class="form-wrapper" style="width: 500px; margin: 0 auto;">
-    <h1>Flatoickr Demo</h1>
-<!-- changing url -original- url: , search_room_path -->
-
-<%= simple_form_for :search, url: rooms_path, method: :get do |t| %>
-<%= t.input :start_date, as: :string, input_html: { class: "datepicker"} %>
-<%= t.input :end_date, as: :string, input_html: { class: "datepicker"} %>
- <%= t.input :district, collection: ["Mitte", "Prenzlauer Berg", "Wedding"] %>
-  <%= t.submit "search", class: "btn btn-primary" %>
-<% end %>
-
-  </div>
-</div>
-
-
-
-
-
-
 <div class="background_image">
 
   <div class="navbar navbar-expand-sm navbar-light navbar-lewagon">
@@ -54,16 +30,34 @@
   </div>
 
   <div class="container">
-    <div class="form-wrapper" style="width: 500px; margin: 0 auto;">
-      <h1>Flatoickr Demo</h1>
-  <%= simple_form_for :search, url: search_room_path, method: :get do |t| %>
-  <%= t.input :start_date, as: :string, input_html: { class: "datepicker"} %>
-  <%= t.input :end_date, as: :string, input_html: { class: "datepicker"} %>
-   <%= t.input :district, collection: ["Mitte", "Prenzlauer Berg", "Wedding"] %>
-    <%= t.submit "search", class: "btn btn-primary" %>
-  <% end %>
+
+  <div class="form-wrapper" style="width: 1100px; margin: 0 auto;">
+    <!-- <h1>Flatoickr Demo</h1> -->
+<!-- changing url -original- url: , search_room_path -->
+    <%= simple_form_for :search, url: rooms_path, method: :get do |t| %>
+  <div class="d-flex align-items-top">
+      <div class="search1 p-2">
+        <%= t.input :start_date, as: :string, input_html: { class: "datepicker"} %>
+      </div>
+
+      <div class="search2 p-2">
+        <%= t.input :end_date, as: :string, input_html: { class: "datepicker"} %>
+      </div>
+
+      <div class="search3 p-2">
+        <%= t.input :district, collection: ["Mitte", "Prenzlauer Berg", "Wedding"] %>
+
+      </div>
+
+      <div class="search4 p-2">
+        <%= t.submit "Search", class: "btn btn-flat" %>
+      </div>
+
     </div>
-  </div>
+    <% end %>
+</div>
+
+
 
   <div class="container">
     <% @rooms.each do |room| %>
@@ -82,6 +76,7 @@
     <% end %>
   </div>
 
+</div>
 </div>
 
 
