--- a/app/assets/stylesheets/components/_card.scss
+++ b/app/assets/stylesheets/components/_card.scss
@@ -7,6 +7,7 @@
   align-items: flex-start;
   margin-bottom: 20px;
   position: relative;
+  border-radius: 3px;
 }
 
 .card-product-btn {
@@ -24,7 +25,7 @@
 
 .card-product img {
   height: 100%;
-  width: 250px;
+  width: 300px;
   object-fit: fill;
 }
 
