fixed navbar and minor issues

--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -2,7 +2,8 @@
   justify-content: space-between;
   background: black;
   opacity: 0.75;
-  margin-bottom: 10px;
+  position: fixed;
+  width: 100%;
 }
 
 .navbar-lewagon .navbar-collapse {
