--- a/app/assets/stylesheets/pages/_rooms.scss
+++ b/app/assets/stylesheets/pages/_rooms.scss
@@ -1,5 +1,4 @@
 .background_image {
-  background-image: url("https://images.unsplash.com/photo-1461784121038-f088ca1e7714?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=2550&q=80");
-  // linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3))
-  object-fit: cover;
+  background-image: url("thomas-litangen-SP9HcRASMPE-unsplash.jpg");
+  background-size: cover;
 }
