The styling of the confirmation page

--- a/app/assets/stylesheets/pages/_rooms.scss
+++ b/app/assets/stylesheets/pages/_rooms.scss
@@ -2,3 +2,7 @@
   background-image: url("thomas-litangen-SP9HcRASMPE-unsplash.jpg");
   background-size: cover;
 }
+
+.flatpickr {
+    wrap: true
+}
