--- a/app/views/rooms/index.html.erb
+++ b/app/views/rooms/index.html.erb
@@ -11,15 +11,15 @@
     <%= simple_form_for :search, url: rooms_path, method: :get do |t| %>
   <div class="d-flex align-items-top">
       <div class="search1 p-2">
-        <%= t.input :start_date, as: :string, input_html: { class: "datepicker", value: params[:search][:start_date] } %>
+        <%= t.input :start_date, as: :string, input_html: { class: "datepicker", value: params.dig(:search, :end_date) } %>
       </div>
 
       <div class="search2 p-2">
-        <%= t.input :end_date, as: :string, input_html: { class: "datepicker", value: params[:search][:end_date] } %>
+        <%= t.input :end_date, as: :string, input_html: { class: "datepicker", value: params.dig(:search, :start_date) } %>
       </div>
 
       <div class="search3 p-2">
-        <%= t.input :district, collection: ["Mitte", "Prenzlauer Berg", "Wedding"], selected: params[:district] %>
+        <%= t.input :district, collection: ["Mitte", "Prenzlauer Berg", "Wedding"], selected:  params.dig(:search, :district) %>
 
       </div>
 
