--- a/app/views/rooms/new.html.erb
+++ b/app/views/rooms/new.html.erb
@@ -1,2 +1,31 @@
 <h1>Rooms#new</h1>
 <p>Find me in app/views/rooms/new.html.erb</p>
+
+<div class="container">
+  <%= form_for(@room) do |f| %>
+    <%= f.label :name %>
+    <%= f.text_field :name %>
+    <br>
+    <%= f.label :description %>
+    <%= f.text_field :description %>
+    <br>
+    <%= f.label :address %>
+    <%= f.text_field :address %>
+    <br>
+    <%= f.label :district %>
+    <%= f.text_field :district %>
+    <br>
+    <%= f.label :equipment %>
+    <%= f.text_field :equipment %>
+    <br>
+    <%= f.label :price %>
+    <%= f.text_field :price %>
+    <br>
+    <%= f.submit %>
+  <% end %>
+</div>
+
+<!-- <form action="/restaurants" method="get">
+  <input type="text" name="food_type" placeholder="What kind of food?">
+  <input type="submit">
+</form> -->
