--- a/app/views/rooms/index.html.erb
+++ b/app/views/rooms/index.html.erb
@@ -5,31 +5,38 @@
 
   <div class="container">
 
-  <div class="form-wrapper" style="width: 1100px; margin: 0 auto;">
+    <div class="form-wrapper" style="width: 1100px; margin: 0 auto;">
     <!-- <h1>Flatoickr Demo</h1> -->
 <!-- changing url -original- url: , search_room_path -->
-    <%= simple_form_for :search, url: rooms_path, method: :get do |t| %>
-  <div class="d-flex align-items-top">
-      <div class="search1 p-2">
-        <%= t.input :start_date, as: :string, input_html: { class: "datepicker", value: params.dig(:search, :end_date) } %>
-      </div>
+      <%= simple_form_for :search, url: rooms_path, method: :get do |t| %>
+        <div class="d-flex align-items-top">
+          <div class="search1 p-2">
+            <%= t.input :start_date, as: :string, input_html: { class: "datepicker", value: params.dig(:search, :end_date) } %>
+          </div>
 
-      <div class="search2 p-2">
-        <%= t.input :end_date, as: :string, input_html: { class: "datepicker", value: params.dig(:search, :start_date) } %>
-      </div>
+          <div class="search2 p-2">
+            <%= t.input :end_date, as: :string, input_html: { class: "datepicker", value: params.dig(:search, :start_date) } %>
+          </div>
 
-      <div class="search3 p-2">
-        <%= t.input :district, collection: ["Mitte", "Prenzlauer Berg", "Wedding"], selected:  params.dig(:search, :district) %>
+          <div class="search3 p-2">
+            <%= t.input :district, collection: ["Mitte", "Prenzlauer Berg", "Wedding"], selected:  params.dig(:search, :district) %>
+          </div>
 
-      </div>
+          <div class="search4 p-2">
+            <%= t.submit "Search", class: "btn btn-flat" %>
+          </div>
 
-      <div class="search4 p-2">
-        <%= t.submit "Search", class: "btn btn-flat" %>
-      </div>
-
+        </div>
+      <% end %>
     </div>
-    <% end %>
-</div>
+
+    <div
+      id="map"
+      style="width: 100%;
+      height: 600px;"
+      data-markers="<%= @markers.to_json %>"
+      data-mapbox-api-key="<%= ENV['MAPBOX_API_KEY'] %>"
+    ></div>
 
   <div class="container">
     <% if @rooms.empty? %>
