--- a/app/assets/stylesheets/components/_card.scss
+++ b/app/assets/stylesheets/components/_card.scss
@@ -16,6 +16,12 @@
   bottom:15px;
 }
 
+.card-product-div {
+  position: absolute;
+  right: 15px;
+  bottom:15px;
+}
+
 .price {
   position: absolute;
   right: 15px;
