--- a/app/assets/stylesheets/components/_search_form.scss
+++ b/app/assets/stylesheets/components/_search_form.scss
@@ -1,22 +1,22 @@
 .search1 {
-  color: white;
+  color: black;
   font-family: Helvetica;
   border-radius: 4px;
 }
 
 .search2 {
-  color: white;
+  color: black;
   font-family: Helvetica;
   border-radius: 20px;
 }
 
 .search3 {
-  color: white;
+  color: black;
   font-family: Helvetica;
 }
 
 .search4 {
-  color: white;
+  color: black;
   font-family: Helvetica;
   margin-top: 30px;
 }
