--- a/app/assets/stylesheets/pages/_rooms.scss
+++ b/app/assets/stylesheets/pages/_rooms.scss
@@ -1,7 +1,7 @@
-.background_image {
-  background-image: url("thomas-litangen-SP9HcRASMPE-unsplash.jpg");
-  background-size: cover;
-}
+// .background_image {
+//   background-image: url("thomas-litangen-SP9HcRASMPE-unsplash.jpg");
+//   background-size: cover;
+// }
 
 .flatpickr {
     wrap: true
