--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,14 +1,21 @@
 <div class="banner" style="background-image: linear-gradient(rgba(0,0,0,0.4),rgba(0,0,0,0.4)), url(https://images.unsplash.com/photo-1511671782779-c97d3d27a1d4?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1650&q=80);">
   <div class="container">
     <h1>Welcome to Rock'in' Rooms</h1>
-    <p>Find a room to rock!</p>
-    <%= button_to "Search now!", rooms_path, :id => "open-contacts-dialog-btn",
-      :class => "btn btn-flat", :method => :get %>
-      <br><br>
-      <% if !user_signed_in? %>
-         <%= button_to "Sign in", new_user_session_path, :id => "open-contacts-dialog-btn",
-      :class => "btn btn-flat" %>
-      <% end %>
+    <p>Rent rehearsal rooms in Berlin</p>
+    <br>
 
+      <div class="d-flex">
+        <div>
+          <%= button_to "Let's rock", rooms_path, :id => "open-contacts-dialog-btn",
+          :class => "btn btn-flat m-3", :method => :get %>
+        </div>
+        <br>
+          <div>
+          <% if !user_signed_in? %>
+             <%= link_to "Sign up", new_user_registration_path, :id => "open-contacts-dialog-btn",
+          :class => "btn btn-empty m-3" %>
+          <% end %>
+        </div>
+      </div>
   </div>
 </div>
