--- a/app/assets/stylesheets/components/_banner.scss
+++ b/app/assets/stylesheets/components/_banner.scss
@@ -16,6 +16,7 @@
 .banner p {
   font-size: 26px;
   font-style: italic;
+  font-weight: lighter;
   color: white;
   opacity: .7;
   text-shadow: 1px 1px 3px rgba(0,0,0,0.2);
