--- a/app/assets/stylesheets/components/_footer.scss
+++ b/app/assets/stylesheets/components/_footer.scss
@@ -1,34 +1,34 @@
-.footer {
-  background: #000000;
-  opacity: 0.75;
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-  height: 75px;
-  padding: 0px 50px;
-  color: white;
-  position: fixed;
-  width: 100%;
-  display: table-row;
-}
-.footer-links {
-  display: flex;
-  align-items: center;
-}
-.footer-links a {
-  color: white;
-  opacity: 0.15;
-  text-decoration: none;
-  font-size: 24px;
-  padding: 0px 10px;
-}
-.footer-links a:hover {
-  opacity: 1;
-}
-.footer .fa-heart {
-  color: #D23333;
-}
+// .footer {
+//   background: #000000;
+//   opacity: 0.75;
+//   display: flex;
+//   align-items: center;
+//   justify-content: space-between;
+//   height: 75px;
+//   padding: 0px 50px;
+//   color: white;
+//   position: fixed;
+//   width: 100%;
+//   display: table-row;
+// }
+// .footer-links {
+//   display: flex;
+//   align-items: center;
+// }
+// .footer-links a {
+//   color: white;
+//   opacity: 0.15;
+//   text-decoration: none;
+//   font-size: 24px;
+//   padding: 0px 10px;
+// }
+// .footer-links a:hover {
+//   opacity: 1;
+// }
+// .footer .fa-heart {
+//   color: #D23333;
+// }
 
-.page-wrapper {
-  height: calc(100vh - 139px);
-}
+// .page-wrapper {
+//   height: calc(100vh - 139px);
+// }
