Some changes in dashboard look

--- a/app/views/rooms/edit.html.erb
+++ b/app/views/rooms/edit.html.erb
@@ -1,25 +1,22 @@
-<h1>Edit your room</h1>
+
 
 <div class="container">
-  <%= form_for(@room) do |f| %>
-    <%= f.label :name %>
-    <%= f.text_field :name %>
-    <br>
-    <%= f.label :description %>
-    <%= f.text_field :description %>
-    <br>
-    <%= f.label :address %>
-    <%= f.text_field :address %>
-    <br>
-    <%= f.label :district %>
-    <%= f.text_field :district %>
-    <br>
-    <%= f.label :equipment %>
-    <%= f.text_field :equipment %>
-    <br>
-    <%= f.label :price %>
-    <%= f.text_field :price %>
-    <br>
-    <%= f.submit %>
-  <% end %>
+  <h1>Edit your room</h1>
+  <br>
+    <%= simple_form_for(@room) do |f| %>
+      <%= f.input :name %>
+      <br>
+      <%= f.input :description %>
+      <br>
+      <%= f.input :address %>
+      <br>
+      <%= f.input :district %>
+      <br>
+      <%= f.input :equipment %>
+      <br>
+      <%= f.input :price %>
+      <br>
+      <%= f.submit "Update", class: "btn btn-flat" %>
+    <% end %>
+  <br>
 </div>
