--- a/app/views/rooms/new.html.erb
+++ b/app/views/rooms/new.html.erb
@@ -1,7 +1,6 @@
-<h1>Rooms#new</h1>
-<p>Find me in app/views/rooms/new.html.erb</p>
-
 <div class="container">
+  <h1>Create a new room</h1>
+  <br>
   <%= simple_form_for(@room) do |f| %>
     <%= f.input :name %>
     <br>
