--- a/app/views/dashboard/index.html.erb
+++ b/app/views/dashboard/index.html.erb
@@ -1,25 +1,27 @@
-<h1>Dashboard#index</h1>
-<p>Find me in app/views/dashboard/index.html.erb</p>
-
-<%= link_to "Create room", new_room_path, class: "btn btn-flat card-product-btn" %>
-
-<% @rooms.each do |room| %>
-      <div class="card-product">
-      <img src= <%= room.image_url %> />
-        <div class="card-product-infos">
-          <h2><%= room.name %></h2>
-          <p><strong>District:</strong> <%= room.district %></p>
-          <p><strong>Address:</strong> <%= room.address %></p>
-          <h2 class="price"><strong><%= room.price %></strong> Złoty / hour</h2>
-          <p><strong>Equipment:</strong> <%= room.equipment %></p>
-          <p><strong>Description:</strong> <%= room.description %></p>
-          <div class="card-product-div">
-          <%= link_to "Edit this room", edit_room_path(room), class: "btn btn-flat" %>
-          <%= link_to "Delete this room", room_path(room), method: :delete,  class: "btn btn-flat" %>
+<div class="container">
+  <h1>Dashboard</h1>
+  <br>
+  <% @rooms.each do |room| %>
+        <div class="card-product">
+        <img src= <%= room.image_url %> />
+          <div class="card-product-infos">
+            <h2><%= room.name %></h2>
+            <p><strong>District:</strong> <%= room.district %></p>
+            <p><strong>Address:</strong> <%= room.address %></p>
+            <h2 class="price"><strong><%= room.price %></strong> Złoty / hour</h2>
+            <p><strong>Equipment:</strong> <%= room.equipment %></p>
+            <p><strong>Description:</strong> <%= room.description %></p>
+            <div class="card-product-div">
+            <%= link_to "Edit", edit_room_path(room), class: "btn btn-flat" %>
+            <%= link_to "Delete", room_path(room), method: :delete,  class: "btn btn-flat" %>
+            </div>
+            <br>
           </div>
-          <br>
         </div>
-      </div>
-    <% end %>
+      <% end %>
+    <%= link_to "Create room", new_room_path, class: "btn btn-flat" %>
+    <br>
+    <br>
+</div>
 
 
