saved to booking table

--- a/app/views/bookings/new.html.erb
+++ b/app/views/bookings/new.html.erb
@@ -5,6 +5,7 @@
   <p>Here you can find details of your confirmation:</p>
 
       <div class="confirmation_photo">
+        <% raise %>
       <img src= <%= @room.image_url %> />
       </div>
       <br>
@@ -19,4 +20,6 @@
           <p><strong>Description:</strong> <%= @room.description %></p>
         </div>
       </div>
+
+  <% raise %>
   </div>
