--- a/app/views/dashboard/index.html.erb
+++ b/app/views/dashboard/index.html.erb
@@ -1,6 +1,3 @@
-
-
-
 <div class="container">
   <h1>Dashboard</h1>
   <br>
@@ -17,6 +14,30 @@
             <div class="card-product-div">
             <%= link_to "Edit", edit_room_path(room), class: "btn btn-flat" %>
             <%= link_to "Delete", room_path(room), method: :delete,  class: "btn btn-flat" %>
+            </div>
+            <br>
+          </div>
+        </div>
+      <% end %>
+    <%= link_to "Create room", new_room_path, class: "btn btn-flat" %>
+    <br>
+    <br>
+</div>
+<div class="container">
+   <% @bookings.each do |booking| %>
+        <div class="card-product">
+        <img src= <%= booking.room.image_url %> />
+          <div class="card-product-infos">
+            <h2><%= booking.room.name %></h2>
+            <p><strong>District:</strong> <%= booking.room.district %></p>
+            <p><strong>Address:</strong> <%= booking.room.address %></p>
+            <h2 class="price"><strong><%= booking.room.price %></strong> Złoty / hour</h2>
+            <p><strong>Equipment:</strong> <%= booking.room.equipment %></p>
+            <p><strong>Description:</strong> <%= booking.room.description %></p>
+            <p><strong>Start date:</strong> <%= booking.start_time %></p>
+            <p><strong>End date:</strong> <%= booking.end_time %></p>
+            <div class="card-product-div">
+            <%= link_to "Delete", booking_path(booking), method: :delete,  class: "btn btn-flat" %>
             </div>
             <br>
           </div>
