--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,10 +1,10 @@
 <div class="container">
-  <h2>Thanks for joining us!</h2>
+  <h2>Join us</h2>
 
   <%= simple_form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
     <%= f.error_notification %>
 
-    <div class="form-inputs">
+    <div class="form-inputs" style="width: 500px";>
       <%= f.input :email,
                   required: true,
                   autofocus: true,
