--- a/app/views/rooms/index.html.erb
+++ b/app/views/rooms/index.html.erb
@@ -15,7 +15,7 @@
             </div>
 
             <div class="search3 p-2">
-              <%= t.input :district, collection: ["Mitte", "Prenzlauer Berg", "Wedding"], selected:  params.dig(:search, :district) %>
+              <%= t.input :district, collection: ["Charlottenburg", "Wilmersdorf", "Friedrichshain", "Kreuzberg", "Mitte", "Prenzlauer Berg", "Lichtenberg", "Wedding", "Neukölln", "Pankow", "Reinickendorf", "Spandau", "Steglitz", "Tempelhof", "Schöneberg", "Treptow", "Hohenschönhausen", "Marzahn", "Hellersdorf", "Köpenick", "Zehlendorf"], selected:  params.dig(:search, :district) %>
             </div>
 
             <div class="search4 p-2">
