--- a/app/views/dashboard/index.html.erb
+++ b/app/views/dashboard/index.html.erb
@@ -1,6 +1,7 @@
-<div class="container">
-  <h1>Dashboard</h1>
-  <br>
+
+<div class="container-dashboard">
+<div class="container-for-rooms">
+  <h2>Your rooms:</h2>
   <% @rooms.each do |room| %>
         <div class="card-product">
         <img src= <%= room.image_url %> />
@@ -10,7 +11,7 @@
             <p><strong>Address:</strong> <%= room.address %></p>
             <h2 class="price"><strong><%= room.price %></strong> Złoty / hour</h2>
             <p><strong>Equipment:</strong> <%= room.equipment %></p>
-            <p><strong>Description:</strong> <%= room.description %></p>
+            <p><strong>Description:</strong> <%= room.description %></p> <br><br>
             <div class="card-product-div">
             <%= link_to "Edit", edit_room_path(room), class: "btn btn-flat" %>
             <%= link_to "Delete", room_path(room), method: :delete,  class: "btn btn-flat" %>
@@ -23,7 +24,8 @@
     <br>
     <br>
 </div>
-<div class="container">
+<div class="container-for-bookings">
+  <h2>Your bookings:</h2>
    <% @bookings.each do |booking| %>
         <div class="card-product">
         <img src= <%= booking.room.image_url %> />
@@ -43,6 +45,7 @@
           </div>
         </div>
       <% end %>
+</div>
 </div>
 
 
