--- a/app/views/rooms/index.html.erb
+++ b/app/views/rooms/index.html.erb
@@ -3,7 +3,7 @@
 
     <div class="form-wrapper" style="width: 1300px; margin: 0 auto;">
 
-      
+
 
       <!--------------------FORM TO SELECT DATES AND DISTRICT--------->
       <%= simple_form_for :search, url: rooms_path, method: :get do |t| %>
@@ -14,7 +14,7 @@
 
           <div class="search2 p-2">
             <%= t.input :end_date, as: :string, input_html: { class: "datepicker", value: params.dig(:search, :end_date) } %>
-
+          </div>
             <div class="search3 p-2">
               <%= t.input :district, collection: ["Mitte", "Prenzlauer Berg", "Wedding"], selected:  params.dig(:search, :district) %>
             </div>
